--- a/config/locales/jpn/action.yml
+++ b/config/locales/jpn/action.yml
@@ -17,7 +17,7 @@ jpn:
       # edit: "Modifier l'animal\_: %{name}"
       # index: "Productions animales"
       # new: "Nouvel animal"
-      # show: "Animal\_: %{name}"
+      # show: "%{nature_name}\_: %{name}"
     backend/areas:
       # edit: "Modifier la zone postale\_: %{name}"
       # index: "Zones postales"
@@ -901,6 +901,7 @@ jpn:
       # title: "Catégories de tiers"
     # line: "Ligne n°%{index}\_:"
     # line_stock: "Lieu de stockage: %{warehouse}, quantité disponible: %{virtual_q}"
+    # list: "Liste"
     # listing_extract: "Éxécuter l’extraction"
     # listing_mail: "Envoyer un courriel"
     # listings: "Extractions de données"
@@ -921,6 +922,7 @@ jpn:
     # mandates_filters: "Vous devez saisir au moins une valeur de recherche pour un des champs"
     # mandates_new_fields: "Vous devez saisir au moins une valeur dans l’un des champs de modification"
     # manual_period: "du %{start} au %{finish}"
+    # map: "Carte"
     # medical_informations: "Informations médicales"
     # meeting: "Lieu(x) de rencontre"
     menu:  #?
@@ -1378,6 +1380,9 @@ jpn:
       # one: "%{count} contact"
       # other: "%{count} contacts"
       # zero: "0 contact"
+    x_days:
+      # one: "%{count} jour"
+      # other: "%{count} jours"
     x_depositable_payments:
       # one: "%{count} encaissement à encaisser depuis au moins 15 j."
       # other: "%{count} encaissement à encaisser depuis au moins 15 j."
@@ -1417,6 +1422,9 @@ jpn:
       # one: "%{count} responsabilité"
       # other: "%{count} responsabilités "
       # zero: "0 responsabilité"
+    x_months:
+      # one: "%{count} mois"
+      # other: "%{count} mois"
     x_observations:
       # one: "%{count} observation"
       # other: "%{count} observations"
@@ -1467,6 +1475,9 @@ jpn:
     x_waiting_outgoing_deliveries:
       # one: "%{count} livraison sortante en attente"
       # other: "%{count} livraisons sortantes en attente"
+    x_years:
+      # one: "%{count} an"
+      # other: "%{count} ans"
     # y: "Oui"
     # yearly: "Annuelle"
   notifications:
