--- a/config/locales/jpn/action.yml
+++ b/config/locales/jpn/action.yml
@@ -829,6 +829,7 @@ jpn:
     # go: "Valider"
     # graph_statistics: "Statistiques graphiques"
     # group: "Groupe"
+    # groups: "Groupes"
     # help: "Aide"
     # hint: "Astuce\_: %{value}"
     home: "持て成しの手伝いに帰り"
@@ -901,6 +902,7 @@ jpn:
       # title: "Catégories de tiers"
     # line: "Ligne n°%{index}\_:"
     # line_stock: "Lieu de stockage: %{warehouse}, quantité disponible: %{virtual_q}"
+    # list: "Liste"
     # listing_extract: "Éxécuter l’extraction"
     # listing_mail: "Envoyer un courriel"
     # listings: "Extractions de données"
@@ -921,6 +923,7 @@ jpn:
     # mandates_filters: "Vous devez saisir au moins une valeur de recherche pour un des champs"
     # mandates_new_fields: "Vous devez saisir au moins une valeur dans l’un des champs de modification"
     # manual_period: "du %{start} au %{finish}"
+    # map: "Carte"
     # medical_informations: "Informations médicales"
     # meeting: "Lieu(x) de rencontre"
     menu:  #?
@@ -1110,6 +1113,7 @@ jpn:
     # phone: "Tél."
     # picture: "Photo"
     # placeholder: "Espace réservé"
+    # places: "Lieux"
     # planned_on: "Date prévisionnelle"
     # play: "Éxécuter"
     # please_wait: "Merci de patienter..."
@@ -1378,6 +1382,9 @@ jpn:
       # one: "%{count} contact"
       # other: "%{count} contacts"
       # zero: "0 contact"
+    x_days:
+      # one: "%{count} jour"
+      # other: "%{count} jours"
     x_depositable_payments:
       # one: "%{count} encaissement à encaisser depuis au moins 15 j."
       # other: "%{count} encaissement à encaisser depuis au moins 15 j."
@@ -1417,6 +1424,9 @@ jpn:
       # one: "%{count} responsabilité"
       # other: "%{count} responsabilités "
       # zero: "0 responsabilité"
+    x_months:
+      # one: "%{count} mois"
+      # other: "%{count} mois"
     x_observations:
       # one: "%{count} observation"
       # other: "%{count} observations"
@@ -1467,6 +1477,9 @@ jpn:
     x_waiting_outgoing_deliveries:
       # one: "%{count} livraison sortante en attente"
       # other: "%{count} livraisons sortantes en attente"
+    x_years:
+      # one: "%{count} an"
+      # other: "%{count} ans"
     # y: "Oui"
     # yearly: "Annuelle"
   notifications:
