--- a/config/locales/eng/action.yml
+++ b/config/locales/eng/action.yml
@@ -286,6 +286,7 @@ eng:
     backend/product_indicator_nature_choices: #?
     backend/product_indicator_natures: #?
     backend/product_indicators: #?
+    backend/product_localizations: #?
     backend/product_memberships: #?
     backend/product_moves:
       edit: "Edit the stock move: %{name}"
