--- a/config/locales/spa/action.yml
+++ b/config/locales/spa/action.yml
@@ -329,6 +329,7 @@ spa:
     backend/product_indicator_nature_choices: #?
     backend/product_indicator_natures: #?
     backend/product_indicators: #?
+    backend/product_localizations: #?
     backend/product_memberships: #?
     backend/product_moves:
       # edit: "Modifier le mouvement de stock\_: %{name}"
