--- a/config/locales/arb/models.yml
+++ b/config/locales/arb/models.yml
@@ -350,6 +350,12 @@ arb:
         updater: "التحدبث" #?
         warehouse: "مكان التخزين" #?
         warehouse_id: "مكان التخزين" #?
+      product_localization:
+        # arrival_cause: "Cause d'entrée"
+        # container: "Contenant"
+        # departure_cause: "Cause de sortie"
+        # started_at: "Entrée"
+        # stopped_at: "Sortie"
       product_move:
         # origin: "Origine"
         origin_id: "منشأ" #?
@@ -742,6 +748,7 @@ arb:
       account: "الحساب"
       account_balance: "رصيد الحساب"
       # affair: "Affaire"
+      # animal: "Animal"
       area: "المنطقة البريدية"
       # asset: "Immobilisation"
       # asset_depreciation: "Amortissement d’immobilisation"
@@ -813,6 +820,7 @@ arb:
       product_category: "فئة الانتاج" #?
       product_component: "عنصر الانتاج" #?
       # product_group: "Groupe de produit"
+      # product_localization: "Passage d'un produit en un lieu"
       # product_membership: "Passage d'un produit dans un groupe"
       product_move: "حركة السهم"
       product_nature: "الانتاج"
@@ -886,6 +894,7 @@ arb:
     area_unit: "وحدة المساحة"
     area_unit_id: "وحدة مساحة" #?
     areas: "الرموز البريدية"
+    # arrival_cause: "Arrival cause"
     # arrival_reasons: "Causes d'entrée"
     arrived_on: "وصل يوم"
     # asset: "Immobilisation"
@@ -1075,6 +1084,7 @@ arb:
     department: "المبنى"
     department_id: "مبنى" #?
     departments: "الخدمات"
+    # departure_cause: "Departure cause"
     # departure_reasons: "Causes de sortie"
     deposit: "الاقتطاع المصرفي"
     deposit_id: "اقتطاع مرفي" #?
@@ -1737,19 +1747,8 @@ arb:
     # work_number: "Numéro de travail"
     # zone: "Zone"
   enumerize:
-    animal:
-      arrival_reasons:
-        # birth: "Naissance"
-        # housing: "Pension"
-        # other: "Autres"
-        # purchase: "Achat"
-      departure_reasons:
-        # autoconsumption: "Autoconsommation"
-        # dead: "Décès"
-        # other: "Autres"
-        # sale: "Vente"
-      income_reasons: #?
-      outgone_reasons: #?
+    animal:  #?
+ #?
     animal_treatment: #?
     asset:
       depreciation_method:
@@ -1855,6 +1854,21 @@ arb:
         # sale: "Vente"
       income_reasons: #?
       outgone_reasons: #?
+    product_localization:
+      arrival_cause:
+        # birth: "Naissance"
+        # housing: "Pension"
+        # other: "Autres"
+        # purchase: "Achat"
+      departure_cause:
+        # consumption: "Autoconsommation"
+        # death: "Décès"
+        # other: "Autres"
+        # sale: "Vente"
+      nature:
+        # exterior: "Sortie"
+        # interior: "Entrée"
+        # transfer: "Transfert"
     product_nature:
       nature:
         # product: "Produit"
