--- a/config/locales/eng/action.yml
+++ b/config/locales/eng/action.yml
@@ -286,7 +286,11 @@ eng:
     backend/product_indicator_nature_choices: #?
     backend/product_indicator_natures: #?
     backend/product_indicators: #?
-    backend/product_localizations: #?
+    backend/product_localizations:
+      # edit: "Modifier une localisation d'un produit"
+      # index: "Tracabilité des produits"
+      # new: "Nouvelle localisation d'un produit"
+      # show: "Détail d'une localisation d'un produit"
     backend/product_memberships: #?
     backend/product_moves:
       edit: "Edit the stock move: %{name}"
@@ -521,6 +525,7 @@ eng:
     backend/preferences: "Preferences"
     backend/prices: "Prices" #?
     backend/product_groups: "Product groups"
+    # backend/product_localizations: "Tracabilité"
     backend/product_moves: "Stock moves"
     backend/product_nature_categories: "Product categories"
     # backend/product_nature_prices: "Prix par type de produits"
