--- a/config/locales/jpn/action.yml
+++ b/config/locales/jpn/action.yml
@@ -267,7 +267,11 @@ jpn:
     backend/product_indicator_nature_choices: #?
     backend/product_indicator_natures: #?
     backend/product_indicators: #?
-    backend/product_localizations: #?
+    backend/product_localizations:
+      # edit: "Modifier une localisation d'un produit"
+      # index: "Tracabilité des produits"
+      # new: "Nouvelle localisation d'un produit"
+      # show: "Détail d'une localisation d'un produit"
     backend/product_memberships: #?
     backend/product_moves:
       # edit: "Modifier le mouvement de stock\_: %{name}"
@@ -499,6 +503,7 @@ jpn:
     # backend/outgoing_payments: "Décaissements"
     # backend/preferences: "Préférences"
     # backend/product_groups: "Lot de produits"
+    # backend/product_localizations: "Tracabilité"
     # backend/product_moves: "Mouvements de stock"
     # backend/product_nature_categories: "Catégories de type de produits"
     # backend/product_nature_prices: "Prix par type de produits"
