--- a/config/locales/spa/models.yml
+++ b/config/locales/spa/models.yml
@@ -2,6 +2,7 @@ spa:
   activerecord:
     attributes:
       animal:
+        # born_at: "Date de naissance"
         # variety: "Race"
       animal_group: #?
       animal_race: #?
