--- a/config/locales/jpn/models.yml
+++ b/config/locales/jpn/models.yml
@@ -2,6 +2,7 @@ jpn:
   activerecord:
     attributes:
       animal:
+        # born_at: "Date de naissance"
         # variety: "Race"
       animal_group: #?
       animal_race: #?
@@ -967,6 +968,7 @@ jpn:
     # reflections: "Reflections"
     # relative_humidity: "Humidité relative"
     # remaining_duration: "Durée d’utilisation prévue (heures)"
+    # remember_me: "Se souvenir de moi"
     # reproductor: "Reproducteur"
     # required: "Obligatoire"
     # reservoir: "Réservoir"
