--- a/config/locales/fra/action.yml
+++ b/config/locales/fra/action.yml
@@ -642,6 +642,7 @@ fra:
     active_fixed_sum: "Total actifs immobilisés"
     active_sum: "Total actifs"
     add: "Ajouter"
+    add_choice: "Ajouter un choix"
     add_condition: "Ajouter la condition"
     add_conditions: "Ajoutez des conditions"
     add_delivery: "Ajouter une livraison"
