--- a/config/locales/jpn/action.yml
+++ b/config/locales/jpn/action.yml
@@ -585,6 +585,7 @@ jpn:
     # active_fixed_sum: "Total actifs immobilisés"
     # active_sum: "Total actifs"
     add: "加える"
+    # add_choice: "Ajouter un choix"
     # add_condition: "Ajouter la condition"
     # add_conditions: "Ajoutez des conditions"
     # add_delivery: "Ajouter une livraison"
