--- a/config/locales/spa/action.yml
+++ b/config/locales/spa/action.yml
@@ -674,6 +674,7 @@ spa:
     active_fixed_sum: "Total activos inmobilisados"
     active_sum: "Total activos"
     # add: "Ajouter"
+    # add_choice: "Ajouter un choix"
     # add_condition: "Ajouter la condition"
     # add_conditions: "Ajoutez des conditions"
     # add_delivery: "Ajouter une livraison"
