add dynamic sales dashboard

--- a/config/locales/fra/action.yml
+++ b/config/locales/fra/action.yml
@@ -979,6 +979,7 @@ fra:
     locale: "Langue"
     localization: "Localisation géographique"
     lock: "Verrouiller"
+    logout: "Déconnexion"
     mail: "Envoyer un courriel"
     mailing: "Mailing"
     mails:
