--- a/config/locales/jpn/action.yml
+++ b/config/locales/jpn/action.yml
@@ -1274,6 +1274,7 @@ jpn:
     # set_reconcilable_new_but_existing_third_accounts: "Rendre lettrables les nouveaux comptes tiers déjà existants"
     # ship: "Prévue le"
     # show: "Afficher"
+    # sign_out: "Se déconnecter"
     # simplified: "Régime du réel simplifié"
     # source: "Source de données"
     # start: "Du"
