--- a/config/locales/fra/help/accounts-index.txt
+++ b/config/locales/fra/help/accounts-index.txt
@@ -7,7 +7,7 @@ Si un compte est lettrable alors, vous pourrez utiliser le module de [[>backend/
 >>> Les écritures non lettrées d'un compte lettrable seront reprises à l'identique d'un exercice comptable à un autre.
 
 ===== Gestion des comptes  =====
-Le plan de compte est extensible à volonté, vous pouvez [[>backend/accounts#new|rajouter]] autant de comptes que nécessaire. Par la suite, il vous sera possible de les modifier {{theme:icons/edit.png}} ou même de les supprimer {{theme:icons/destroy.png}} à condition qu'il n'existe aucune écriture relative à ce compte.
+Le plan de compte est extensible à volonté, vous pouvez [[>backend/accounts#new|rajouter]] autant de comptes que nécessaire. Par la suite, il vous sera possible de les modifier {{icon:edit}} ou même de les supprimer {{icon:destroy}} à condition qu'il n'existe aucune écriture relative à ce compte.
 
 >>> Il est possible de créer des comptes en alpha-numérique à partir du 4ème caractère. 
 >>> Exemple~: 411MARTIN
