--- a/config/locales/fra/help/incoming_delivery_modes-index.txt
+++ b/config/locales/fra/help/incoming_delivery_modes-index.txt
@@ -2,5 +2,5 @@
 
 Les types de livraison permettent de connaître le moyen et les conditions d'acheminement de la marchandise.
 
-Vous pouvez [[>backend/incoming_delivery_modes#new|ajouter]] {{theme:icons/new.png|ajouter}}, modifier {{theme:icons/edit.png|modifier}} ou supprimer {{theme:icons/destroy.png|supprimer}} un type de livraison.
+Vous pouvez [[>backend/incoming_delivery_modes#new|ajouter]] {{icon:new|ajouter}}, modifier {{icon:edit|modifier}} ou supprimer {{icon:destroy|supprimer}} un type de livraison.
 
